# ava-home

./: .gitignore  Cargo.toml  README.md  dashboard.html  dashboard2.html  prompt.txt  start.sh  ws.html
.run/: Run radiator-api.run.xml  Run radiator-ctrl.run.xml
ava-toolkit/: Cargo.toml
ava-toolkit/resources/: Radiator.json  RegulationMap.json  RegulatorRadiator.json  TempSensor.json
ava-toolkit/src/: device_lock.rs  device_message.rs  domotic_factory.rs  generic_device.rs  hard_loop.rs  init_loop.rs  lib.rs  loop_factory.rs  processing.rs  properties.rs
common-config/src/: conf_reader.rs
commons-pg/: Cargo.toml
commons-pg/src/: lib.rs  sql_transaction.rs  sql_transaction2.rs
dashboard/: Cargo.toml  README.md  ppm.bat  ppm.sh  ppm_f.bat
dashboard-api/: Cargo.toml  README.md  secret_file_2.json
dashboard-api/env/config/: application.properties
dashboard-api/src/: clairdelune_api.rs  conf_reader.rs  dao_db.rs  main.rs
dashboard-api/templates/: index_old.hbs
dashboard/src/: all_tests.rs  conf_reader.rs  dao.rs  dao_db.rs  device_message.rs  main.rs
dashboard/static/js/: index.js  index2.js  mqtt_message_processing.js  ppm.js  ws_handler.js
dashboard/templates/: dashboard.hbs  index.hbs  index2.hbs  input.hbs
deprecated-commons-error/: Cargo.toml
deprecated-commons-pg/: Cargo.toml
deprecated-commons-pg/src/: lib.rs
event-storage/: Cargo.toml
event-storage/resources/: modules.json
event-storage/src/: device_message.rs  device_repo.rs  generic_device.rs  init_loop.rs  loops.rs  main.rs  message_enum.rs  processing.rs
luminator/: Cargo.toml
luminator/resources/: LampRgb.json  SimpleSwitch.json  modules.json
luminator/src/: device_repo.rs  loops.rs  main.rs  message_enum.rs
move-light/: Cargo.toml
move-light/src/: device_message.rs  device_repo.rs  generic_device.rs  init_loop.rs  loops.rs  main.rs  message_enum.rs  processing.rs
mqtt-bridge/: Cargo.toml
mqtt-bridge/src/: main.rs
mqtt5-r/: Cargo.toml  mon_script.lua
mqtt5-r/src/: device_message.rs  device_repo.rs  generic_device.rs  init_loop.rs  loops.rs  main.rs  message_enum.rs  processing.rs
ppm-server/: Cargo.toml  dev_env.bat  ppm_env.bat
ppm-server/src/: main.rs
ppm-server/templates/: index2.hbs  search.hbs
radiator-api/: Cargo.toml
radiator-api/src/: api.rs  main.rs
radiator-ctrl/: Cargo.toml
radiator-ctrl/resources/: modules.json
radiator-ctrl/src/: device_lock.rs  device_message.rs  device_repo.rs  generic_device.rs  init_loop.rs  loops.rs  main.rs  message_enum.rs  processing.rs
radiator-toolkit/: Cargo.toml
radiator-toolkit/src/: lib.rs
re-dashboard/: .env.example  .gitignore  README.md  index.html  main.js  package-lock.json  package.json  rescript.json  vite.config.js
re-dashboard/src/: App.bs.js  App.res  DashboardApi.bs.js  DashboardApi.res  TimelineHelpers.bs.js  TimelineHelpers.res  dashboardApi.js  index.bs.js  index.res  styles.css  timelineHelpers.js
regulator/: Cargo.toml  regulator.lua  types.lua
regulator-heart-beat/: Cargo.toml
regulator-heart-beat/resources/: modules.json
regulator-heart-beat/src/: conf_reader.rs  dao.rs  device_message.rs  device_repo.rs  generic_device.rs  init_loop.rs  main.rs  message_enum.rs  processing.rs  regulation_message.rs
regulator/resources/: modules.json
regulator/src/: db_last_message.rs  device_lock.rs  device_message.rs  device_repo.rs  external_computing.rs  generic_device.rs  init_loop.rs  loops.rs  main.rs  message_enum.rs  processing.rs  properties.rs
src/: hall_inter_switch.rs  hall_lamp.rs  inside_temp_sensor.rs  kitchen_inter_dim.rs  kitchen_lamp.rs  kitchen_loop.rs  kitchen_switch.rs  main.rs  messages.rs  outdoor_temp_sensor.rs  publish.rs  stream.rs  too_hot_loop.rs
