[workspace]

members = [
    "commons-error",
    "event-storage",
    "regulator",
    "regulator-heart-beat",
    "mqtt5-r",
    "move-light",
    "mqtt-bridge",
]

[workspace.dependencies]
log = "^0.4"
log4rs = "^1.2"
chrono = { version = "^0.4", features = ["serde"] }
anyhow = "^1.0"
lazy_static = "^1.4"
mut_static = "^5.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
incremental = true

[profile.dev]
incremental = true
