[workspace]
members = [
    "commons-error",
    "commons-pg",
    "common-config",
    "event-storage",
    "regulator",
    "regulator-heart-beat",
    "mqtt5-r",
    "luminator",
    "mqtt-bridge",
    "radiator-ctrl",
    "dashboard", "ava-toolkit",
    "radiator-api",
]

[workspace.dependencies]
log = "^0.4"
log4rs = "^1.2"
env_logger = "^0.11"
postgres = { version = "^0.19", features = ["with-chrono-0_4"] }
postgres-types = "^0.2"
r2d2_postgres = { version = "^0.18" }
anyhow = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
lazy_static = "^1.4"
mut_static = "^5.0"
rumqttc = "^0.24"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
uuid = { version = "^1.6", features = ["v4"] }
async-trait = "^0.1"
tokio-postgres = "0.7.10"
tokio = { version = "^1", features = ["full"] }
axum = { version = "^0.7", features = ["multipart"] }
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-rustls", "chrono"]}



[profile.release]
opt-level = 3
debug = false
debug-assertions = false
incremental = true

[profile.dev]
incremental = true

