[package]
name = "dashboard"
version = "0.5.0"
authors = ["dpapin1118 <denis.pro@isd.lu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.12.0"
rs-uuid = "0.3.1"
log = "0.4"
log4rs = "0.11.0"
okapi = { version = "0.4", features = ["derive_json_schema"] }
java-properties = "1.2.0"
obfstr = "0.2"

uuid = "^0.5"
rust-crypto = "0.2.36"
rand = "0.7.3"
rustc-serialize = "0.3.24"

serde-xml-rs = "0.4.0"
xml-rs = "0.8.3"
csv = "1.1.3"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
async-trait = "0.1.81"
axum = { version = "^0.7", features = ["multipart"] }
handlebars = "^6.1"
tower-http = { version = "^0.6", features = ["fs", "trace"] }

postgres = { workspace = true }
postgres-types = { workspace = true }

anyhow = { workspace = true }
lazy_static = { workspace = true }
mut_static = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }



commons-error = {path= "../commons-error"}
commons-pg = {path= "../commons-pg" }





