[package]
name = "event-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
tokio-postgres = { workspace = true }


ava-toolkit = {path="../ava-toolkit"}
common-config = {path ="../common-config"}
