[package]
name = "luminator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
rumqttc = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
uuid = { workspace = true }
tokio-postgres = { workspace = true }

commons-error = {path="../commons-error"}
ava-toolkit = {path="../ava-toolkit"}