[package]
name = "mqtt-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
futures-channel = "0.3.30"
futures-util = "0.3.30"
log = "0.4.20"
time = { version = "0.3.34", features = [] }
env_logger = "0.11.2"
rumqttc = "^0.23"
uuid = { version = "1.7.0", features = ["v4"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.116"
