[package]
name = "mqtt-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
rumqttc = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
uuid = { workspace = true }
tokio-postgres = { workspace = true }

tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
futures-channel = "0.3.30"
futures-util = "0.3.30"
time = { version = "0.3.34", features = [] }

commons-error = {path="../commons-error"}
ava-toolkit = {path="../ava-toolkit"}