[package]
name = "radiator-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }

ava-toolkit = { path = "../ava-toolkit" }
common-config = { path = "../common-config" }
