[package]
name = "radiator-ctrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
lazy_static = { workspace = true }
anyhow = { workspace = true }
rumqttc = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }


ava-toolkit = {path="../ava-toolkit"}
common-config = {path ="../common-config"}
radiator-toolkit = { path = "../radiator-toolkit" }
