[package]
name = "regulator-heart-beat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = { workspace = true }
lazy_static = { workspace = true }
chrono = { workspace = true }
rumqttc = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }

java-properties = "1.2.0"

commons-error = {path="../commons-error"}
commons-pg = {path= "../commons-pg" }
ava-toolkit = {path="../ava-toolkit"}
common-config = {path ="../common-config"}